--- a/download.html
+++ b/download.html
@@ -5,19 +5,16 @@
   <title>Ke stažení | Dispatch Simulator: Czechia</title>
   <style>
     body {
-      font-family: 'Segoe UI', sans-serif;
-      background-color: #f5f5f5;
+      font-family: Arial, sans-serif;
+      background: #f3f3f3;
       margin: 0;
       padding: 0;
-      color: #222;
-      text-align: center;
     }
 
     nav {
-      background-color: #d62828;
+      background: #d62828;
       padding: 15px;
       text-align: center;
-      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.15);
     }
 
     nav a {
@@ -25,59 +22,35 @@
       margin: 0 15px;
       text-decoration: none;
       font-weight: bold;
-      font-size: 1.1em;
-      transition: color 0.3s ease;
-    }
-
-    nav a:hover {
-      color: #ffd166;
     }
 
     .content {
-      max-width: 800px;
-      margin: 60px auto;
-      padding: 40px;
-      background-color: white;
-      border-radius: 12px;
-      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.08);
+      padding: 50px 20px;
+      max-width: 1000px;
+      margin: auto;
+      text-align: center;
     }
 
     h1 {
       font-size: 2.4em;
-      color: #d62828;
-      margin-bottom: 20px;
+      margin-bottom: 30px;
+      color: #222;
     }
 
     p {
       font-size: 1.2em;
-      line-height: 1.6;
+      color: #444;
     }
 
     .highlight {
       margin-top: 30px;
       display: inline-block;
-      padding: 15px 30px;
+      padding: 15px 25px;
       background-color: #ffd166;
       color: #222;
-      border-radius: 8px;
       font-weight: bold;
-      font-size: 1.1em;
-      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    }
-
-    @media (max-width: 768px) {
-      .content {
-        padding: 20px;
-        margin: 30px 15px;
-      }
-
-      h1 {
-        font-size: 2em;
-      }
-
-      p {
-        font-size: 1.05em;
-      }
+      border-left: 5px solid #d62828;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.07);
     }
   </style>
 </head>
