--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
   <title>Kontakt | Dispatch Simulator: Czechia</title>
   <style>
     body {
-      font-family: 'Segoe UI', sans-serif;
+      font-family: Arial, sans-serif;
       background: #f3f3f3;
       margin: 0;
       padding: 0;
@@ -16,7 +16,6 @@
       background: #d62828;
       padding: 15px;
       text-align: center;
-      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.15);
     }
 
     nav a {
@@ -24,77 +23,59 @@
       margin: 0 15px;
       text-decoration: none;
       font-weight: bold;
-      font-size: 1.1em;
-      transition: color 0.3s ease;
-    }
-
-    nav a:hover {
-      color: #ffd166;
     }
 
     .content {
-      max-width: 800px;
-      margin: 60px auto;
-      padding: 40px;
-      background: white;
-      border-radius: 12px;
-      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.08);
+      padding: 50px 20px;
+      max-width: 1000px;
+      margin: auto;
+      text-align: center;
     }
 
     h1 {
-      text-align: center;
       font-size: 2.4em;
-      color: #d62828;
+      color: #222;
       margin-bottom: 10px;
     }
 
     p {
-      text-align: center;
-      color: #555;
       font-size: 1.1em;
+      color: #444;
+      margin-bottom: 30px;
     }
 
     form {
       display: flex;
       flex-direction: column;
       gap: 20px;
-      margin-top: 30px;
+      max-width: 600px;
+      margin: 0 auto 30px;
     }
 
     input, textarea {
       padding: 15px;
       font-size: 1.1em;
       border: 1px solid #ccc;
-      border-radius: 6px;
-      transition: border-color 0.3s;
-    }
-
-    input:focus, textarea:focus {
-      border-color: #d62828;
-      outline: none;
+      width: 100%;
     }
 
     button {
       background: #d62828;
       color: white;
       padding: 14px;
-      border: none;
-      border-radius: 6px;
       font-size: 1.1em;
       font-weight: bold;
+      border: none;
       cursor: pointer;
-      transition: background 0.3s ease, transform 0.1s ease;
     }
 
     button:hover {
       background: #a61f1f;
-      transform: scale(1.02);
     }
 
     @media (max-width: 768px) {
       .content {
-        padding: 25px 20px;
-        margin: 30px 15px;
+        padding: 30px 15px;
       }
 
       h1 {
