--- a/links.html
+++ b/links.html
@@ -5,7 +5,7 @@
   <title>Odkazy | Dispatch Simulator: Czechia</title>
   <style>
     body {
-      font-family: 'Segoe UI', sans-serif;
+      font-family: Arial, sans-serif;
       background: #f3f3f3;
       margin: 0;
       padding: 0;
@@ -16,7 +16,6 @@
       background: #d62828;
       padding: 15px;
       text-align: center;
-      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.15);
     }
 
     nav a {
@@ -24,39 +23,29 @@
       margin: 0 15px;
       text-decoration: none;
       font-weight: bold;
-      font-size: 1.1em;
-      transition: color 0.3s ease;
-    }
-
-    nav a:hover {
-      color: #ffd166;
     }
 
     .content {
-      max-width: 800px;
-      margin: 60px auto;
-      padding: 40px;
-      background: white;
-      border-radius: 12px;
-      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.08);
+      padding: 50px 20px;
+      max-width: 1000px;
+      margin: auto;
       text-align: center;
     }
 
     h1 {
       font-size: 2.4em;
-      color: #d62828;
-      margin-bottom: 10px;
+      color: #222;
+      margin-bottom: 20px;
     }
 
     p {
       font-size: 1.2em;
-      color: #555;
+      color: #444;
     }
 
     @media (max-width: 768px) {
       .content {
-        padding: 25px 20px;
-        margin: 30px 15px;
+        padding: 30px 15px;
       }
 
       h1 {
