--- a/links.html
+++ b/links.html
@@ -1,55 +1,119 @@
 <!DOCTYPE html>
 <html lang="cs">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>Odkazy | Dispatch Simulator: Czechia</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: #f3f3f3;
+    :root {
+      --primary: #d62828;
+      --accent: #f77f00;
+      --bg: #f4f4f4;
+      --text: #1a1a1a;
+      --white: #ffffff;
+      --shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+    }
+
+    * {
+      box-sizing: border-box;
       margin: 0;
       padding: 0;
-      color: #222;
+    }
+
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      background-color: var(--bg);
+      color: var(--text);
+      display: flex;
+      min-height: 100vh;
+    }
+
+    aside {
+      background-color: var(--primary);
+      width: 240px;
+      min-height: 100vh;
+      padding: 20px;
+      position: fixed;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      box-shadow: var(--shadow);
+    }
+
+    .logo {
+      width: 120px;
+      margin-bottom: 30px;
+      filter: drop-shadow(0 0 8px rgba(0, 0, 0, 0.2));
     }
 
     nav {
-      background: #d62828;
-      padding: 15px;
-      text-align: center;
+      display: flex;
+      flex-direction: column;
+      gap: 20px;
+      width: 100%;
     }
 
     nav a {
       color: white;
-      margin: 0 15px;
       text-decoration: none;
+      font-size: 1.1em;
       font-weight: bold;
+      padding: 10px 20px;
+      transition: background 0.3s;
+      border-radius: 8px;
     }
 
-    .content {
-      padding: 50px 20px;
+    nav a:hover {
+      background-color: var(--accent);
+    }
+
+    main {
+      margin-left: 240px;
+      padding: 60px 40px;
+      flex: 1;
       max-width: 1000px;
-      margin: auto;
-      text-align: center;
     }
 
     h1 {
-      font-size: 2.4em;
-      color: #222;
+      font-size: 2.5rem;
+      color: var(--primary);
       margin-bottom: 20px;
+      text-align: center;
     }
 
     p {
-      font-size: 1.2em;
+      font-size: 1.3em;
       color: #444;
+      text-align: center;
     }
 
     @media (max-width: 768px) {
-      .content {
-        padding: 30px 15px;
+      aside {
+        width: 100%;
+        height: auto;
+        flex-direction: row;
+        justify-content: space-between;
+        padding: 10px 20px;
+        position: relative;
+      }
+
+      .logo {
+        width: 80px;
+        margin: 0;
+      }
+
+      nav {
+        flex-direction: row;
+        gap: 10px;
+      }
+
+      main {
+        margin-left: 0;
+        padding: 40px 20px;
       }
 
       h1 {
-        font-size: 2em;
+        font-size: 2rem;
       }
 
       p {
@@ -59,18 +123,23 @@
   </style>
 </head>
 <body>
-  <nav>
-    <a href="index.html">Domů</a>
-    <a href="about.html">O hře</a>
-    <a href="development.html">Vývoj</a>
-    <a href="download.html">Ke stažení</a>
-    <a href="contact.html">Kontakt</a>
-    <a href="links.html">Odkazy</a>
-  </nav>
 
-  <div class="content">
+  <aside>
+    <img src="logo.png-removebg-preview.png" alt="Logo" class="logo" />
+    <nav>
+      <a href="index.html">Domů</a>
+      <a href="about.html">O hře</a>
+      <a href="development.html">Vývoj</a>
+      <a href="download.html">Ke stažení</a>
+      <a href="contact.html">Kontakt</a>
+      <a href="links.html">Odkazy</a>
+    </nav>
+  </aside>
+
+  <main>
     <h1>Odkazy</h1>
     <p><strong>Coming soon!</strong> Již brzy zde najdeš odkazy na komunitu, oficiální profily, stránky ke stažení nebo užitečné externí zdroje.</p>
-  </div>
+  </main>
+
 </body>
 </html>
