--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 <body>
 
   <aside>
-    <img src="logo.png.png" alt="Logo" class="logo" />
+    <img src="logo.png" alt="Logo" class="logo" />
     <nav>
       <a href="index.html">Domů</a>
       <a href="about.html">O hře</a>
