--- a/download.html
+++ b/download.html
@@ -141,7 +141,7 @@
 <body>
 
   <aside>
-    <img src="logo.png-removebg-preview.png" alt="Logo" class="logo" />
+    <img src="logo.png" alt="Logo" class="logo" />
     <nav>
       <a href="index.html">Domů</a>
       <a href="about.html">O hře</a>
