--- a/development.html
+++ b/development.html
@@ -184,7 +184,7 @@
 
     <div class="version-block">
       <h2>Verze 0.0 – Začátek</h2>
-      <p class="version-status">Stav: Aktivní vývoj</p>
+      <p class="version-status">Stav: Vývojová verze (Nelze stáhnout)</p>
       <ul>
         <li>Navržen koncept hry</li>
         <li>Spuštěna oficiální webová stránka</li>
