--- a/index.html
+++ b/index.html
@@ -113,8 +113,9 @@
         flex-direction: row;
         justify-content: space-between;
         padding: 10px 20px;
-        position: relative;
-        transform: translateX(-100%);
+        position: fixed;
+        top: 0;
+        left: -240px;
       }
 
       .logo {
@@ -156,6 +157,9 @@
         border: none;
         cursor: pointer;
         border-radius: 50%;
+        position: absolute;
+        top: 20px;
+        left: 20px;
       }
 
       .menu-toggle.active + nav {
@@ -163,7 +167,7 @@
       }
 
       aside.active {
-        transform: translateX(0);
+        left: 0;
       }
     }
   </style>
