--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="cs">
 <head>
   <meta charset="UTF-8" />
-  <title>Dispatch Simulator: Czechia</title>
+  <title>Testuje se chyba</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
     :root {
@@ -190,9 +190,9 @@
   </aside>
 
   <main>
-    <h1>Dispatch Simulator: Czechia</h1>
+    <h1>Testuje se chyba</h1>
     <p>
-      Realistická simulace práce dispečera tísňové linky 112. Ve hře se ujmeš řízení všech složek IZS v prostředí České republiky – od hasičů přes záchranku až po policii. Buduj stanice, nakupuj techniku, trénuj personál a reaguj na krizové situace v reálném čase s podporou AI.
+      V tento moment web nefunguje z důvodu oprav
     </p>
 
     <footer>
