--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="cs">
 <head>
   <meta charset="UTF-8" />
-  <title>Dispatch Simulator: Czechia</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Dispatch Simulator: Czechia</title>
   <style>
     :root {
       --primary: #d62828;
@@ -28,7 +28,7 @@
       min-height: 100vh;
     }
 
-    /* Sidebar (menu) for larger screens */
+    /* Sidebar (menu) */
     aside {
       background-color: var(--primary);
       width: 240px;
@@ -69,7 +69,7 @@
       background-color: var(--accent);
     }
 
-    /* Main content area */
+    /* Main content */
     main {
       margin-left: 240px;
       padding: 60px 40px;
@@ -100,14 +100,14 @@
       color: #777;
     }
 
-    /* Mobile menu hidden by default */
+    /* Mobile menu */
     @media (max-width: 768px) {
       aside {
         width: 100%;
         height: auto;
         position: fixed;
         top: 0;
-        left: -240px;  /* Hidden by default */
+        left: -240px;  /* Initially hidden on mobile */
         padding: 20px;
       }
 
@@ -141,7 +141,7 @@
         font-size: 1.1rem;
       }
 
-      /* Hamburger icon for mobile */
+      /* Hamburger icon */
       .menu-toggle {
         display: block;
         background-color: var(--primary);
@@ -158,7 +158,7 @@
       }
 
       .menu-toggle.active + aside {
-        left: 0;  /* Menu slides in */
+        left: 0;  /* Slide in the menu */
       }
 
       nav.active {
@@ -166,7 +166,7 @@
       }
     }
 
-    /* Hide navigation menu by default on mobile */
+    /* Initially hide navigation on mobile */
     nav {
       display: none;
     }
@@ -201,7 +201,7 @@
   </main>
 
   <script>
-    // Toggle mobile menu
+    // Toggle mobile menu visibility
     const menuToggle = document.querySelector('.menu-toggle');
     const aside = document.querySelector('aside');
     const nav = document.querySelector('nav');
