--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       min-height: 100vh;
     }
 
-    /* Sidebar (menu) */
+    /* Sidebar (menu) for larger screens */
     aside {
       background-color: var(--primary);
       width: 240px;
@@ -109,6 +109,7 @@
         top: 0;
         left: -240px;  /* Initially hidden on mobile */
         padding: 20px;
+        z-index: 10;
       }
 
       .logo {
@@ -154,11 +155,12 @@
         position: absolute;
         top: 20px;
         left: 20px;
-        z-index: 10;
+        z-index: 20;
       }
 
-      .menu-toggle.active + aside {
-        left: 0;  /* Slide in the menu */
+      /* Menu visibility */
+      aside.active {
+        left: 0;  /* Menu slides in */
       }
 
       nav.active {
