--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
         display: flex;
         flex-direction: column;
         gap: 10px;
+        padding-top: 20px;
       }
 
       nav a {
