--- a/index.html
+++ b/index.html
@@ -106,9 +106,8 @@
     /* Mobile menu */
     @media (max-width: 768px) {
       aside {
-        width: 100%;
-        height: auto;
-        left: -240px; /* Initially hidden */
+        width: 240px; /* Ensure width on mobile */
+        left: -240px; /* Initially hidden off screen */
       }
 
       .logo {
