--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
       flex-direction: column;
       align-items: center;
       box-shadow: var(--shadow);
-      transition: left 0.3s ease;
+      transition: left 0.3s ease; /* Smooth animation */
     }
 
     .logo {
@@ -108,9 +108,8 @@
     /* Mobile menu */
     @media (max-width: 768px) {
       aside {
-        width: 100%;
-        height: auto;
-        left: -240px; /* Initially hidden */
+        width: 240px; /* Ensure width on mobile */
+        left: -240px; /* Initially hidden off screen */
       }
 
       .logo {
@@ -118,8 +117,15 @@
       }
 
       nav {
+        display: flex;
         flex-direction: column;
         gap: 10px;
+        padding-top: 20px;
+      }
+
+      nav a {
+        font-size: 1.2em;
+        padding: 10px;
       }
 
       main {
@@ -132,7 +138,7 @@
       }
 
       p {
-        font-size: 1em;
+        font-size: 1.1rem;
       }
 
       /* Hamburger icon */
