--- a/links.html
+++ b/links.html
@@ -28,6 +28,7 @@
       min-height: 100vh;
     }
 
+    /* Sidebar (menu) */
     aside {
       background-color: var(--primary);
       width: 240px;
@@ -38,6 +39,9 @@
       flex-direction: column;
       align-items: center;
       box-shadow: var(--shadow);
+      top: 0;
+      left: -240px; /* Initially hidden */
+      transition: left 0.3s ease; /* Smooth animation */
     }
 
     .logo {
@@ -67,6 +71,7 @@
       background-color: var(--accent);
     }
 
+    /* Main content */
     main {
       margin-left: 240px;
       padding: 60px 40px;
@@ -87,14 +92,12 @@
       text-align: center;
     }
 
+    /* Mobile menu */
     @media (max-width: 768px) {
       aside {
         width: 100%;
         height: auto;
-        flex-direction: row;
-        justify-content: space-between;
-        padding: 10px 20px;
-        position: relative;
+        left: -240px; /* Initially hidden */
       }
 
       .logo {
@@ -103,7 +106,7 @@
       }
 
       nav {
-        flex-direction: row;
+        flex-direction: column;
         gap: 10px;
       }
 
@@ -117,12 +120,62 @@
       }
 
       p {
-        font-size: 1.1em;
+        font-size: 1.1rem;
+      }
+
+      /* Hamburger icon */
+      .menu-toggle {
+        display: block;
+        background-color: var(--primary);
+        color: white;
+        font-size: 2rem;
+        padding: 10px;
+        border: none;
+        cursor: pointer;
+        border-radius: 50%;
+        position: absolute;
+        top: 20px;
+        left: 20px;
+        z-index: 20;
+      }
+
+      /* Menu visibility */
+      aside.active {
+        left: 0; /* Slide in the menu */
+      }
+
+      nav.active {
+        display: flex;
+      }
+
+      /* Initially hide navigation on mobile */
+      nav {
+        display: none;
+      }
+    }
+
+    /* Desktop menu transition */
+    @media (min-width: 769px) {
+      .menu-toggle {
+        display: none; /* Hide hamburger icon on desktop */
+      }
+
+      aside {
+        left: 0;
+      }
+
+      nav {
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
       }
     }
   </style>
 </head>
 <body>
+
+  <!-- Hamburger icon for mobile -->
+  <button class="menu-toggle">&#9776;</button>
 
   <aside>
     <img src="logo.png" alt="Logo" class="logo" />
@@ -140,6 +193,18 @@
     <h1>Odkazy</h1>
     <p><strong>Coming soon!</strong> Již brzy zde najdeš odkazy na komunitu, oficiální profily, stránky ke stažení nebo užitečné externí zdroje.</p>
   </main>
+
+  <script>
+    // Toggle mobile menu visibility
+    const menuToggle = document.querySelector('.menu-toggle');
+    const aside = document.querySelector('aside');
+    const nav = document.querySelector('nav');
+
+    menuToggle.addEventListener('click', () => {
+      aside.classList.toggle('active');
+      nav.classList.toggle('active');
+    });
+  </script>
 
 </body>
 </html>
