--- a/development.html
+++ b/development.html
@@ -26,6 +26,7 @@
       color: var(--text);
       display: flex;
       min-height: 100vh;
+      position: relative;
     }
 
     /* Sidebar (menu) */
@@ -39,9 +40,9 @@
       flex-direction: column;
       align-items: center;
       box-shadow: var(--shadow);
-      transition: left 0.3s ease;
       top: 0;
-      left: -240px; /* Initially hidden */
+      left: -240px; /* Initially hidden on mobile */
+      transition: left 0.3s ease; /* Slide in effect */
     }
 
     .logo {
@@ -140,7 +141,7 @@
       aside {
         width: 100%;
         height: auto;
-        left: -240px; /* Initially hidden */
+        left: -240px; /* Initially hidden off-screen */
       }
 
       .logo {
@@ -160,10 +161,6 @@
 
       h1 {
         font-size: 2rem;
-      }
-
-      form {
-        padding: 20px;
       }
 
       /* Hamburger icon */
@@ -197,7 +194,7 @@
       }
     }
 
-    /* Desktop menu transition */
+    /* Desktop menu */
     @media (min-width: 769px) {
       .menu-toggle {
         display: none; /* Hide hamburger icon on desktop */
